[gd_scene load_steps=4 format=3 uid="uid://c72qrpgmrbtfr"]

[ext_resource type="Texture2D" uid="uid://bjcee6aq7jj3g" path="res://assets/placeholder_slot.png" id="1_gisg6"]
[ext_resource type="Script" path="res://actors/DragTarget/DragTarget.gd" id="1_qxcp7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4xkj6"]
size = Vector2(480, 480)

[node name="DragTarget" type="Area2D" groups=["drag_target"]]
script = ExtResource("1_qxcp7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4xkj6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-192, -192)
scale = Vector2(3, 3)
texture = ExtResource("1_gisg6")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(-192, -96)
scale = Vector2(3, 3)
texture = ExtResource("1_gisg6")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(-96, -192)
scale = Vector2(3, 3)
texture = ExtResource("1_gisg6")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(-96, -96)
scale = Vector2(3, 3)
texture = ExtResource("1_gisg6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
